syntax = "proto3";
import "geom.proto";

//This defines the types that get pushed to the ObjectState Kafka topic.
package object_state;

message EmptyMsg {}

message RefIDMsg {
    string id = 1;
    enum RefType {
        EXISTENCE = 0;
        DRAWABLE = 1;
        AXIS_ALIGNED_BBOX = 2;
        PROFILE_POINT = 3;
        PROFILE_LINE = 4;
        PROFILE_PLANE = 5;
        PROPERTY = 6;
        EMPTY = 7;
    }
    RefType ref_type = 2;
    uint64 index = 3;
}

message ReferenceMsg {
    RefIDMsg owner = 1;
    RefIDMsg other = 2;
}

message OptionReferenceMsg {
    ReferenceMsg reference = 1;
}

message DependenciesMsg {
    repeated OptionReferenceMsg references = 1;
}

message ObjectMsg {
    string id = 1;
    DependenciesMsg dependencies = 2;
    bytes obj_data = 3;
}

message DeleteMsg {
    string id = 1;
}

//This is the fundamental message sent to the ObjectState topic.
message ChangeMsg {
    string user = 1;
    oneof change_type {
        ObjectMsg add = 2;
        ObjectMsg modify = 3;
        DeleteMsg delete = 4;
    }
    oneof change_source {
        EmptyMsg user_action = 5;
        string undo = 6;
        string redo = 7;
    }
}