syntax = "proto3";
import "object_state.proto";
import "representation.proto";

package walls;

message Point3Msg {
    double x = 1;
    double y = 2;
    double z = 3;
}

message WallMsg {
    Point3Msg first_pt = 1;
    Point3Msg second_pt = 2;
    double width = 3;
    double height = 4;
}

message CreateWallsInput {
    repeated WallMsg walls = 1;
}

message CreateWallsOutput {
    repeated object_state.ObjectMsg walls = 1;
}